tests/snapshots/array_destructuring_tests__destructuring_with_references.snap
---
source: tests/array_destructuring_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Array {
                    items: [
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 12,
                                    end: 14,
                                },
                                span: Span {
                                    start: 12,
                                    end: 14,
                                },
                            },
                            by_ref: true,
                            unpack: false,
                            span: Span {
                                start: 12,
                                end: 14,
                            },
                        },
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 16,
                                    end: 18,
                                },
                                span: Span {
                                    start: 16,
                                    end: 18,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 16,
                                end: 18,
                            },
                        },
                        ArrayItem {
                            key: None,
                            value: Variable {
                                name: Span {
                                    start: 21,
                                    end: 23,
                                },
                                span: Span {
                                    start: 21,
                                    end: 23,
                                },
                            },
                            by_ref: true,
                            unpack: false,
                            span: Span {
                                start: 21,
                                end: 23,
                            },
                        },
                    ],
                    span: Span {
                        start: 6,
                        end: 26,
                    },
                },
                expr: Variable {
                    name: Span {
                        start: 27,
                        end: 33,
                    },
                    span: Span {
                        start: 27,
                        end: 33,
                    },
                },
                span: Span {
                    start: 6,
                    end: 33,
                },
            },
            span: Span {
                start: 6,
                end: 35,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 35,
    },
}
