tests/snapshots/array_destructuring_tests__foreach_with_key_and_destructuring.snap
---
source: tests/array_destructuring_tests.rs
assertion_line: 166
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Foreach {
            expr: Variable {
                name: Span {
                    start: 15,
                    end: 21,
                },
                span: Span {
                    start: 15,
                    end: 21,
                },
            },
            key_var: Some(
                Variable {
                    name: Span {
                        start: 25,
                        end: 29,
                    },
                    span: Span {
                        start: 25,
                        end: 29,
                    },
                },
            ),
            value_var: Array {
                items: [
                    ArrayItem {
                        key: None,
                        value: Variable {
                            name: Span {
                                start: 34,
                                end: 36,
                            },
                            span: Span {
                                start: 34,
                                end: 36,
                            },
                        },
                        by_ref: false,
                        unpack: false,
                        span: Span {
                            start: 34,
                            end: 36,
                        },
                    },
                    ArrayItem {
                        key: None,
                        value: Variable {
                            name: Span {
                                start: 38,
                                end: 40,
                            },
                            span: Span {
                                start: 38,
                                end: 40,
                            },
                        },
                        by_ref: false,
                        unpack: false,
                        span: Span {
                            start: 38,
                            end: 40,
                        },
                    },
                ],
                span: Span {
                    start: 33,
                    end: 42,
                },
            },
            body: [
                Echo {
                    exprs: [
                        Binary {
                            left: Binary {
                                left: Variable {
                                    name: Span {
                                        start: 54,
                                        end: 58,
                                    },
                                    span: Span {
                                        start: 54,
                                        end: 58,
                                    },
                                },
                                op: Concat,
                                right: Variable {
                                    name: Span {
                                        start: 61,
                                        end: 63,
                                    },
                                    span: Span {
                                        start: 61,
                                        end: 63,
                                    },
                                },
                                span: Span {
                                    start: 54,
                                    end: 63,
                                },
                            },
                            op: Concat,
                            right: Variable {
                                name: Span {
                                    start: 66,
                                    end: 68,
                                },
                                span: Span {
                                    start: 66,
                                    end: 68,
                                },
                            },
                            span: Span {
                                start: 54,
                                end: 68,
                            },
                        },
                    ],
                    span: Span {
                        start: 49,
                        end: 71,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 72,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 72,
    },
}
