tests/snapshots/array_destructuring_tests__foreach_with_list_destructuring.snap
---
source: tests/array_destructuring_tests.rs
assertion_line: 121
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Foreach {
            expr: Variable {
                name: Span {
                    start: 15,
                    end: 21,
                },
                span: Span {
                    start: 15,
                    end: 21,
                },
            },
            key_var: None,
            value_var: Array {
                items: [
                    ArrayItem {
                        key: None,
                        value: Variable {
                            name: Span {
                                start: 30,
                                end: 32,
                            },
                            span: Span {
                                start: 30,
                                end: 32,
                            },
                        },
                        by_ref: false,
                        unpack: false,
                        span: Span {
                            start: 30,
                            end: 32,
                        },
                    },
                    ArrayItem {
                        key: None,
                        value: Variable {
                            name: Span {
                                start: 34,
                                end: 36,
                            },
                            span: Span {
                                start: 34,
                                end: 36,
                            },
                        },
                        by_ref: false,
                        unpack: false,
                        span: Span {
                            start: 34,
                            end: 36,
                        },
                    },
                ],
                span: Span {
                    start: 25,
                    end: 38,
                },
            },
            body: [
                Echo {
                    exprs: [
                        Binary {
                            left: Variable {
                                name: Span {
                                    start: 50,
                                    end: 52,
                                },
                                span: Span {
                                    start: 50,
                                    end: 52,
                                },
                            },
                            op: Concat,
                            right: Variable {
                                name: Span {
                                    start: 55,
                                    end: 57,
                                },
                                span: Span {
                                    start: 55,
                                    end: 57,
                                },
                            },
                            span: Span {
                                start: 50,
                                end: 57,
                            },
                        },
                    ],
                    span: Span {
                        start: 45,
                        end: 60,
                    },
                },
            ],
            span: Span {
                start: 6,
                end: 61,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 61,
    },
}
