tests/snapshots/array_destructuring_tests__keyed_list_destructuring.snap
---
source: tests/array_destructuring_tests.rs
assertion_line: 80
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Array {
                    items: [
                        ArrayItem {
                            key: Some(
                                String {
                                    value: [
                                        39,
                                        110,
                                        97,
                                        109,
                                        101,
                                        39,
                                    ],
                                    span: Span {
                                        start: 11,
                                        end: 17,
                                    },
                                },
                            ),
                            value: Variable {
                                name: Span {
                                    start: 21,
                                    end: 26,
                                },
                                span: Span {
                                    start: 21,
                                    end: 26,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 11,
                                end: 26,
                            },
                        },
                        ArrayItem {
                            key: Some(
                                String {
                                    value: [
                                        39,
                                        97,
                                        103,
                                        101,
                                        39,
                                    ],
                                    span: Span {
                                        start: 28,
                                        end: 33,
                                    },
                                },
                            ),
                            value: Variable {
                                name: Span {
                                    start: 37,
                                    end: 41,
                                },
                                span: Span {
                                    start: 37,
                                    end: 41,
                                },
                            },
                            by_ref: false,
                            unpack: false,
                            span: Span {
                                start: 28,
                                end: 41,
                            },
                        },
                    ],
                    span: Span {
                        start: 6,
                        end: 44,
                    },
                },
                expr: Variable {
                    name: Span {
                        start: 45,
                        end: 52,
                    },
                    span: Span {
                        start: 45,
                        end: 52,
                    },
                },
                span: Span {
                    start: 6,
                    end: 52,
                },
            },
            span: Span {
                start: 6,
                end: 54,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 54,
    },
}
